about image z-index fixed

--- a/src/sections/about/About.scss
+++ b/src/sections/about/About.scss
@@ -56,7 +56,7 @@
             position: absolute;
             top: -30px;
             left: -15px;
-            z-index: 10;
+            z-index: 1;
         }
     }
 }
